    + Drop DPKG_EXPORT_BUILDFLAGS and /usr/share/dpkg/buildflags.mk
    + Drop manual DEB_BUILD_OPTIONS parsing
    + Use debian/clean instead of dh_clean parameters and add some more
      files to clean up
    + Use dh_install and debian/install instead of install and cp
    + Simplify variable usage
    + Fix dh_clean vs dh_prep in install target
    + No more ignore dh_installman errors
  * Apply wrap-and-sort.
  * Fix lintian warning package-contains-info-dir-file

 -- Axel Beckert <abe@debian.org>  Thu, 16 May 2013 03:15:42 +0200

screen (4.1.0~20120320gitdb59704-7) unstable; urgency=low

  * Extend 60-644788-screen-4.1.0-4.0.3-interoperability.patch:
    + Add support for detaching (Closes: #684342)
    + Document remaining issues in debian/NEWS

 -- Axel Beckert <abe@debian.org>  Sun, 16 Sep 2012 13:42:12 +0200

screen (4.1.0~20120320gitdb59704-6) unstable; urgency=low

  * Apply patch by Julien Cristau <jcristau@debian.org> to add 4.0.3
    interoperability. (Closes: #683228; fixing the issue properly instead
    of working around it. Thanks!)
    + Drop all debconf handling and translations of debconf templates
      (Closes: #679747, #683227; Thanks Beatrice Torracca and Christian
      Perrier!)
    + Drop build-depends on po-debconf and pre-depends on debconf
    + Drop debian/NEWS (Closes: #678950)
    + Remove no more necessary lintian override
  * Screen's info pages are now split over more files than before. Also
    include the new file doc/screen.info-6 (Closes: #682283)

 -- Axel Beckert <abe@debian.org>  Tue, 07 Aug 2012 08:54:42 +0200

screen (4.1.0~20120320gitdb59704-5) unstable; urgency=low

  * Disable patch 52fix_screen_utf8_nfd.patch since it introduced a
    regression (Closes: #677512, Reopens: #600246)
  * Fix bug number of Slovak debconf translation in
    4.1.0~20120320gitdb59704-3 changelog entry
  * Use GMANE URLs for refering to upstream discussions as lists.gnu.org