@@ -17,6 +17,7 @@ screen (4.1.0~20120320gitdb59704-8) UNRELEASED; urgency=low
     + Simplify variable usage
     + Fix dh_clean vs dh_prep in install target
     + No more ignore dh_installman errors
+    + Finally switch to a dh7 style debian/rules file
   * Apply wrap-and-sort.
   * Fix lintian warning package-contains-info-dir-file
 
